default/objects/ReasonMapping__mdt/ReasonMapping__mdt.object-meta.xml
<CustomObject>
    <label>Reason Mapping</label>
    <pluralLabel>Reason Mappings</pluralLabel>
</CustomObject>