default/objects/ReasonMapping__mdt/fields/DiscardIMA__c.field-meta.xml
<CustomField>
    <fullName>DiscardIMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discard IMA</label>
    <type>Checkbox</type>
</CustomField>