default/objects/ReasonMapping__mdt/fields/DiscardLagunAro__c.field-meta.xml
<CustomField>
    <fullName>DiscardLagunAro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discard Lagun Aro</label>
    <type>Checkbox</type>
</CustomField>