default/objects/ReasonMapping__mdt/fields/DiscardPelayo__c.field-meta.xml
<CustomField>
    <fullName>DiscardPelayo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discard Pelayo</label>
    <type>Checkbox</type>
</CustomField>