default/objects/ReasonMapping__mdt/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <label>ReasonCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
                <label>All-risk accidental</label>
            </value>
            <value>
                <fullName>A12</fullName>
                <label>Appliance breakdown</label>
            </value>
            <value>
                <fullName>L2</fullName>
                <label>Appliance windows</label>
            </value>
            <value>
                <fullName>A1</fullName>
                <label>Bodily injuries</label>
            </value>
            <value>
                <fullName>R2</fullName>
                <label>Civil liability</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Community</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>Consortium coverage</label>
            </value>
            <value>
                <fullName>R4</fullName>
                <label>Damage claim/legal protection</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>Domestic animals</label>
            </value>
            <value>
                <fullName>A7</fullName>
                <label>Electrical assistance</label>
            </value>
            <value>
                <fullName>D3</fullName>
                <label>Electrical damage</label>
            </value>
            <value>
                <fullName>U1</fullName>
                <label>Emergencies</label>
            </value>
            <value>
                <fullName>A13</fullName>
                <label>Emergency assistance</label>
            </value>
            <value>
                <fullName>I1</fullName>
                <label>Fire, lightning, explosion</label>
            </value>
            <value>
                <fullName>D1</fullName>
                <label>Garden deterioration</label>
            </value>
            <value>
                <fullName>R1</fullName>
                <label>Glass breakage</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Guide dog accidents</label>
            </value>
            <value>
                <fullName>M1</fullName>
                <label>Handyman</label>
            </value>
            <value>
                <fullName>A8</fullName>
                <label>Home assistance</label>
            </value>
            <value>
                <fullName>I2</fullName>
                <label>Impact</label>
            </value>
            <value>
                <fullName>A9</fullName>
                <label>IT assistance</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <label>Lost luggage</label>
            </value>
            <value>
                <fullName>A11</fullName>
                <label>Mugging</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>Payment protection</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>Refrigerated food</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <label>Sanitary ware</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>Theft</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Vandalism Acts</label>
            </value>
            <value>
                <fullName>A10</fullName>
                <label>VIP assistance</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>Water</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>