default/objects/ReasonMapping__mdt/fields/SubReasonCode__c.field-meta.xml
<CustomField>
    <fullName>SubReasonCode__c</fullName>
    <label>SubReasonCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Masonry</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Refrigerated food</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Animals</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>Vision and sound devices</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>Landlord /owner of the house//owner/co-owner</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>Settlements or land movements due to third-party works</label>
            </value>
            <value>
                <fullName>A7</fullName>
                <label>Telephone advice in case of theft</label>
            </value>
            <value>
                <fullName>A8</fullName>
                <label>Electrical assistance (liability)</label>
            </value>
            <value>
                <fullName>A9</fullName>
                <label>On-site IT assistance</label>
            </value>
            <value>
                <fullName>A10</fullName>
                <label>Remote IT assistance</label>
            </value>
            <value>
                <fullName>A11</fullName>
                <label>Home technology assistance</label>
            </value>
            <value>
                <fullName>A12</fullName>
                <label>Veterinary assistance</label>
            </value>
            <value>
                <fullName>A13</fullName>
                <label>Guide dog veterinary assistance</label>
            </value>
            <value>
                <fullName>A14</fullName>
                <label>Blockages with damage</label>
            </value>
            <value>
                <fullName>A15</fullName>
                <label>Blockages without damage</label>
            </value>
            <value>
                <fullName>A16</fullName>
                <label>Mugging outside the home</label>
            </value>
            <value>
                <fullName>A17</fullName>
                <label>Vandalism</label>
            </value>
            <value>
                <fullName>A18</fullName>
                <label>Tenant vandalism</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>Bicycles</label>
            </value>
            <value>
                <fullName>C1</fullName>
                <label>Boilers and heaters</label>
            </value>
            <value>
                <fullName>C2</fullName>
                <label>Meteorite fall</label>
            </value>
            <value>
                <fullName>C3</fullName>
                <label>Fall of trees, poles, and antennas</label>
            </value>
            <value>
                <fullName>C4</fullName>
                <label>Aircraft crash</label>
            </value>
            <value>
                <fullName>C5</fullName>
                <label>Lightning strike</label>
            </value>
            <value>
                <fullName>C6</fullName>
                <label>Emergency locksmith</label>
            </value>
            <value>
                <fullName>C7</fullName>
                <label>Locksmith</label>
            </value>
            <value>
                <fullName>C8</fullName>
                <label>Animal collision</label>
            </value>
            <value>
                <fullName>C9</fullName>
                <label>Vehicle collision</label>
            </value>
            <value>
                <fullName>C10</fullName>
                <label>Condensation</label>
            </value>
            <value>
                <fullName>C11</fullName>
                <label>Remote backup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>